--- a/fly.toml
+++ b/fly.toml
@@ -8,32 +8,37 @@ primary_region = "lax"
 console_command = "php /var/www/html/artisan tinker"
 
 [build]
-  [build.args]
-    NODE_VERSION = "18"
-    PHP_VERSION = "8.2"
+[build.args]
+NODE_VERSION = "18"
+PHP_VERSION = "8.2"
 
 [env]
-  APP_ENV = "production"
-  APP_URL = "https://noteshare.fly.dev"
-  LOG_CHANNEL = "stderr"
-  LOG_LEVEL = "info"
-  LOG_STDERR_FORMATTER = "Monolog\\Formatter\\JsonFormatter"
-  SESSION_DRIVER = "cookie"
-  SESSION_SECURE_COOKIE = "true"
-  DB_CONNECTION="sqlite"
-  DB_DATABASE="/var/www/html/storage/database/database.sqlite"
+APP_ENV = "production"
+APP_URL = "https://noteshare.fly.dev"
+LOG_CHANNEL = "stderr"
+LOG_LEVEL = "info"
+LOG_STDERR_FORMATTER = "Monolog\\Formatter\\JsonFormatter"
+SESSION_DRIVER = "cookie"
+SESSION_SECURE_COOKIE = "true"
+DB_CONNECTION = "sqlite"
+DB_DATABASE = "/var/www/html/storage/database/database.sqlite"
 
 [http_service]
-  internal_port = 8080
-  force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ["app"]
+internal_port = 8080
+force_https = true
+auto_stop_machines = true
+auto_start_machines = true
+min_machines_running = 0
+processes = ["app"]
+
+[processes]
+app = ""
+cron = "cron -f"
+worker = "php artisan queue:listen"
 
 [mounts]
-  source="storage_vol"
-  destination="/var/www/html/storage"
+source = "storage_vol"
+destination = "/var/www/html/storage"
 
 [deploy]
-  release_command = "php /var/www/html/artisan migrate --force"
+release_command = "php /var/www/html/artisan migrate --force"
