--- a/fly.toml
+++ b/fly.toml
@@ -20,8 +20,7 @@ LOG_LEVEL = "info"
 LOG_STDERR_FORMATTER = "Monolog\\Formatter\\JsonFormatter"
 SESSION_DRIVER = "cookie"
 SESSION_SECURE_COOKIE = "true"
-DB_CONNECTION = "sqlite"
-DB_DATABASE = "/var/www/html/storage/database/database.sqlite"
+DB_CONNECTION = "pgsql"
 MAIL_MAILER = "postmark"
 MAIL_FROM_ADDRESS = "noteshare@zimfy.co"
 MAIL_FROM_NAME = "Noteshare"
@@ -38,10 +37,6 @@ processes = ["app"]
 app = ""
 cron = "cron -f"
 worker = "php artisan queue:listen"
-
-[mounts]
-source = "storage_vol"
-destination = "/var/www/html/storage"
 
 [deploy]
 release_command = "php /var/www/html/artisan migrate --force"
